[tool.setuptools_scm]

[tool.poetry]
name = "lightbunny"
version = "0.1.0"
description = "Deep Learning based Lightweight EEG Source Imaging"
authors = ["hareeen <me@hareen.io>"]
license = "BSD-3-Clause-Clear"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
nilearn = "^0.10.4"
mne = "^1.7.1"
dill = "^0.3.8"
numpy = "^2.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
tqdm = "^4.66.4"
tvb = "^2.0.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
plotly = "^5.22.0"
torchinfo = "^1.8.0"
ipyevents = "^2.0.2"
qtpy = "^2.4.1"
pyvistaqt = "^0.11.1"
trame-vtk = "^2.8.9"
trame = "^3.6.3"
trame-vuetify = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
